update file names, add more functionality to manifest.json

--- a/popup.html
+++ b/popup.html
@@ -12,6 +12,6 @@
         <span id="timerBlock">25:00</span>
         <button  id="timerBtn">START</button>
     </div>
-    <script src="main.js"></script>
+    <script src="popup.js"></script>
 </body>
 </html>
